--- a/public/style.scss
+++ b/public/style.scss
@@ -4,7 +4,8 @@
 
 // Create your own map
 $custom-colors: (
-  "custom-color": rgb(181, 22, 196)
+  "custom-color": rgb(181, 22, 196),
+  "fondo-carousel": rgb(36, 41, 40)
 );
 
 // Merge the maps
